# embeddedMotors

./: .gitignore  CMakeLists.txt  CMakeLists.txt.withProperSerial  FreeRTOSConfig.h  README.md  lab7.c  lab7slave.c  mGpio.h  mSpi.c  master.h  motor.c  motor.h  pwm.c
common/: FreeRTOSConfig.h  motor.c  motor.h  myAssert.c  myAssert.h  pwm.c  pwm.h
master/: CMakeLists.txt  master.c  master.h  spi_io.c
slave/: CMakeLists.txt  slave.c  slave.h
